--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,4 +1,12 @@
 img {
-    width: 200px;
+    width: 400px;
     height: auto;
+    background-image: transparent;
+    background-color: transparent;
+}
+span {
+    align-items: center;
+}
+a {
+    align-items: center;
 }
