--- a/src/components/DropDownBtn/DropDownBtn.css
+++ b/src/components/DropDownBtn/DropDownBtn.css
@@ -15,18 +15,37 @@
 .btn-dropdown:hover {
   background-color: #565656;
 }
-li{
-  font-size: 10px;
-  list-style-type: none;
-  padding: 10px;
-}
 button img{
   height: 20px;
   width: auto;
   filter: invert(85%);
 }
 ul li img{
-  height: 30px;
-  width: 30px;
-  min-height: auto;
+  height: 20px;
+  width: auto;
+  padding-left: 0;
 }  
+ul {
+  align-self: left;
+  background-color: #565656;
+  
+}
+div {
+  display:inline-block;
+  width:110px;
+}
+ul,li { list-style-type: none;
+  list-style-position:inside;
+  margin:0;
+  padding:0; 
+}  
+li{
+  width: 95%;
+  font-size: 15px;
+  padding-left: 0;
+  text-align: left;
+  padding: 10px;
+  list-style-type: none;
+  display: flex;
+  align-content: flex-start;
+}
