--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,10 +1,27 @@
-form img{
-    height: 20px;
-    width: auto;
-    filter: invert(85%);
-  }
-  button{
-    text-indent: -999px;
-    background: url('../../assets/search.png');
-    background-color: transparent;
-  }
+.inline{
+    width:700px;
+    margin:auto;
+}
+.input-icons i {
+    position: absolute;
+}
+  
+.input-icons {
+    width: 100%;
+    margin-bottom: 10px;
+}
+  
+.icon {
+    padding: 10px;
+    min-width: 40px;
+}
+  
+.input-field {
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    margin-bottom: 3px;
+}
+i{
+    margin-left: 75%;
+}
