--- a/src/components/DropDownBtn/DropDownBtn.css
+++ b/src/components/DropDownBtn/DropDownBtn.css
@@ -1,51 +1,48 @@
-.btn-dropdown {
-  width: 70px;
-  height: auto;
-  background-color: transparent; 
-  border: none; 
-  border-radius: 10%;
-  color: white; 
-  padding: 5px 10px; 
-  font-size: 16px; 
-  cursor: pointer; 
-  align-items: center;
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
-/* Darker background on mouse-over */
-.btn-dropdown:hover {
-  background-color: #565656;
+.dropdown {
+  position: relative;
+  float: left;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #3a3a3a;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  background-color: transparent;
+  float: left;
+}
+a img {
+  width: 10px;
+  height: auto;
+}
+.dropdown-content a:hover {
+  background-color: #888;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 button img{
-  height: 20px;
-  width: auto;
+  width: 20px;
+  height: auto;
   filter: invert(85%);
-}
-ul li img{
-  height: 20px;
-  width: auto;
-  padding-left: 0;
-}  
-ul {
-  align-self: left;
-  background-color: #565656;
-  
-}
-div {
-  display:inline-block;
-  width:110px;
-}
-ul,li { list-style-type: none;
-  list-style-position:inside;
-  margin:0;
-  padding:0; 
-}  
-li{
-  width: 95%;
-  font-size: 15px;
-  padding-left: 0;
-  text-align: left;
-  padding: 10px;
-  list-style-type: none;
-  display: flex;
-  align-content: flex-start;
 }
