--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,127 +1,51 @@
-body {
-  background:#e1e1e1;
+.navigation {
+  height: 1000px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0rem;
+  background-color: transparent;
+  color: black;
+  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+  flex-direction: column;
 }
-
-.header {
-  background:#fff;
-  box-shadow:0 2px 5px rgba(0,0,0,0.2);
-  padding: 15px 20px;
-  width:100%;
-  position:fixed;
-  top:0;
-  left:0;
-  z-index:9;
+.brand-name {
+  text-decoration: none;
+  color: black;
+  font-size: 1.3rem;
+  margin-left: 1rem;
 }
-
-button {
-  background:transparent;
-  border:none;
-  width:30px;
-  height:30px;
-  cursor:pointer; 
-  outline:0;
+.navigation-menu {
+  height: 100%;
+  width: 100%;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
 }
-
-.toggle span {
-  width:100%;
-  height:3px;
-  background:#555;
-  display:block;
-  position:relative;
-  cursor:pointer;
+.navigation-menu ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
-
-.toggle span:before,
-.toggle span:after {
-  content:'';
-  position:absolute;
-  left:0;
-  width:100%;
-  height:100%;
-  background:#555;
-  transition: all 0.3s ease-out;
+.navigation-menu li {
+  list-style-type: none;
+  margin: 0 1rem;
 }
-
-.toggle span:before {
-  top:-8px;
+.hamburger {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: #283b8b;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
 }
-
-.toggle span:after {
-  top:8px;
-}
-
-.toggle span.toggle {
-  background:transparent;
-}
-
-.toggle span.toggle:before {
-  top:0;
-  transform:rotate(-45deg);
-  background:#4CAF50;
-  
-}
-
-.toggle span.toggle:after {
-  top:0;
-  transform:rotate(45deg);
-  background:#4CAF50;
-}
-
-.sidebar {
-  background:#fff;
-  width:200px;
-  position:fixed;
-  top:0;
-  left:-235px;
-  height:100%;
-  box-shadow:0 2px 8px rgba(0,0,0,0.2);
-  padding-top:90px;
-  transition:all 0.3s ease-out;
-}
-
-.sidebar ul {
-  list-style:none;
-}
-
-.sidebar ul li {
-  display:block;
-}
-
-.sidebar ul li a {
-  padding:8px 15px;
-  font-size:16px;
-  color:#222;
-  font-family:arial;
-  text-decoration:none;
-  display:block;
-  position:relative;
-  z-index:1;
-  transition:all 0.3s ease-out;
-  font-weight:500;
-}
-
-.sidebar ul li a:before {
-  content:'';
-  position:absolute;
-  bottom:0;
-  left:50%;
-  right:50%;
-  transform:translate(-50%,-50%);
-  width:0;
-  height:1px;
-  background:#4CAF50;
-  z-index:-1;
-  transition:all 0.3s ease-out;
-}
-
-.sidebar ul li a:hover:before {
-  width:100%;
-}
-
-.sidebar ul li a:hover {
-  color:#4CAF50;
-}
-
-.sidebarshow {
-  left:0;
+.hamburger:hover {
+  background-color: #2642af;
 }
