--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .navigation {
-  height: 1000px;
-  width: 200px;
+  height: 100%;
+  width: auto;
   display: flex;
   align-items: center;
   padding: 0.5rem 0rem;
@@ -18,17 +18,23 @@
 .navigation-menu {
   height: 100%;
   width: 100%;
-  margin-left: auto;
+  margin-left: 0;
   display: flex;
   flex-direction: column;
+}
+.navigation-menu h1{
+  font-size: small;
+  color: rgb(154, 154, 154);
 }
 .navigation-menu ul {
   display: flex;
   flex-direction: column;
   padding: 0;
+  color: white;
 }
 .navigation-menu li {
   list-style-type: none;
+  text-decoration: none;
   margin: 0 1rem;
 }
 .hamburger {
