--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -10,34 +10,36 @@ header {
     position: flex;
     float: right;
   }
+  header button{
+    background-color: transparent;
+  }
   .sidebar {
     position: absolute;
     top: 60px;
-    left: -15vw;
+    right: -15vw;
     height: 100%;
     width: 15vw;
     transition: left 0.3s ease-in-out;
-    background-color: transparent;
+    background-color: #888;
   }
   .sidebar-toggle {
     position: absolute;
     top: 20%;
-    right: -60px;
-    height: 60px;
-    width: 60px;
+    width: 100px;
     z-index: 1;
   }
   .content {
-    position: absolute;
-    top: 60px;
-    left: 0;
-    right: 0;
+    position: flex;
+    flex-direction: column;
     height: 100%;
-    transition: left 0.3s ease-in-out;
-    background-color: transparent;
+    width: 100%;
+    transition: right 0.3s ease-in-out;
+    background-color: #888;
+    
   }
   .sidebar.open {
-    left: 0;
+    right: 0;
+    top: 0;
   }
   .content.open {
     left: 15vw;
