--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -10,8 +10,12 @@ header {
     position: flex;
     float: right;
   }
-  header button{
+  .button-bar{
+    display: flex;
     background-color: transparent;
+    width:30px;
+    height: 100%;
+    justify-content: center;
   }
   .sidebar {
     position: absolute;
@@ -20,13 +24,7 @@ header {
     height: 100%;
     width: 15vw;
     transition: left 0.3s ease-in-out;
-    background-color: #888;
-  }
-  .sidebar-toggle {
-    position: absolute;
-    top: 20%;
-    width: 100px;
-    z-index: 1;
+    background-color: #292929;
   }
   .content {
     position: flex;
@@ -34,7 +32,7 @@ header {
     height: 100%;
     width: 100%;
     transition: right 0.3s ease-in-out;
-    background-color: #888;
+    background-color: #3a3939;
     
   }
   .sidebar.open {
@@ -44,6 +42,7 @@ header {
   .content.open {
     left: 15vw;
   }
+  /* Bar */
   .float{
     position:absolute;
     width:60px;
