--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -25,33 +25,17 @@
 .navigation-menu h1{
   font-size: small;
   color: rgb(154, 154, 154);
+  padding-left: 0px;
 }
 .navigation-menu ul {
   display: flex;
   flex-direction: column;
-  padding: 0;
+  align-items: flex-start;
   color: white;
 }
 .navigation-menu li {
   list-style-type: none;
   text-decoration: none;
+  float: left;
   margin: 0 1rem;
-}
-.hamburger {
-  border: 0;
-  height: 40px;
-  width: 40px;
-  padding: 0.5rem;
-  border-radius: 50%;
-  background-color: #283b8b;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-  position: absolute;
-  top: 50%;
-  right: 25px;
-  transform: translateY(-50%);
-  display: none;
-}
-.hamburger:hover {
-  background-color: #2642af;
 }
