--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,4 +1,35 @@
-header {
+  .sidebar {
+    position: absolute;
+    top: 60px;
+    right: -15vw;
+    height: 100%;
+    width: 15vw;
+    transition: left 0.3s ease-in-out;
+    background-color: #292929;
+  }
+  .sidebar.open {
+    right: 0;
+    top: 0;
+    height: 100%;
+  }
+  .sidebar-style{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  /* Bar */
+  .float{
+    position:absolute;
+    width:60px;
+    height:60px;
+    top:0px;
+    right:0px;
+    background-color:transparent;
+    color:#FFF;
+  }
+  header {
     position: flex;
     width:100%;
     height: 60px;
@@ -17,39 +48,3 @@ header {
     height: 100%;
     justify-content: center;
   }
-  .sidebar {
-    position: absolute;
-    top: 60px;
-    right: -15vw;
-    height: 100%;
-    width: 15vw;
-    transition: left 0.3s ease-in-out;
-    background-color: #292929;
-  }
-  .content {
-    position: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    transition: right 0.3s ease-in-out;
-    background-color: #3a3939;
-    
-  }
-  .sidebar.open {
-    right: 0;
-    top: 0;
-  }
-  .content.open {
-    left: 15vw;
-  }
-  /* Bar */
-  .float{
-    position:absolute;
-    width:60px;
-    height:60px;
-    top:0px;
-    right:0px;
-    background-color:transparent;
-    color:#FFF;
-  }
-  
