--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,16 +2,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    height: 300px;
-    padding: 25px;
+    width: 230px;
+    height: 230px;
+    padding: 30px;
     border-radius: 5%;
     background-color: #3b3a3a;
 }
+.wrapper h1{
+    font-size: 15px;
+}
 .card img{
-    width: 100px;
+    width: 80px;
     height: auto;
 }
 .card h1{
-    font-size: 25px;
+    font-size: 20px;
+}
+.card p{
+    font-size:14px;
+    margin: 0;
+}
+/* Card Section */
+.card-section{
+    width: 78%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 130px;
+}
+.wrapper{
+    width: 100%;
+    margin-top: 50px;
 }
