--- a/src/components/DropDownBtn/DropDownBtn.css
+++ b/src/components/DropDownBtn/DropDownBtn.css
@@ -5,7 +5,7 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
-  margin-top:20px;
+  margin-top: 20px;
 }
 
 .dropdown {
@@ -19,7 +19,7 @@
   right: 0;
   background-color: #3a3a3a;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -42,7 +42,7 @@ a img {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-button img{
+button img {
   width: 20px;
   height: auto;
   filter: invert(90%);
