--- a/src/components/QuestionSection/Question/Question.css
+++ b/src/components/QuestionSection/Question/Question.css
@@ -22,7 +22,7 @@
   
   .content {
     padding: 0 18px;
-    max-height: 0;
+    max-height: 200px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
@@ -30,7 +30,7 @@
   li{
     list-style: none;
     margin: 0;
-	padding: 36px 0 36px 84px;
+	padding: 0 0 0 84px;
 	list-style: none;
 	background-image: URL(
     'https://static.thenounproject.com/png/1144832-200.png');
@@ -38,4 +38,8 @@
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: 40px;
+  border-top: solid 0.001px black ;
+}
+li h1{
+  font-size: 20px;
 }
