--- a/src/components/QuestionSection/Question/Question.css
+++ b/src/components/QuestionSection/Question/Question.css
@@ -2,14 +2,14 @@
     background-color: transparent;
     color: black;
     cursor: pointer;
-    padding: 18px;
+    padding: 30px;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
     font-size: 15px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
   
   .active, .collapsible:hover {
@@ -30,7 +30,7 @@
   li{
     list-style: none;
     margin: 0;
-	padding: 0 0 0 84px;
+	padding: 0 30px 30px 50px;
 	list-style: none;
 	background-image: URL(
     'https://static.thenounproject.com/png/1144832-200.png');
@@ -39,7 +39,11 @@
 	background-position: left center;
 	background-size: 40px;
   border-top: solid 0.001px black ;
+  text-align: left;
 }
 li h1{
   font-size: 20px;
+}
+li p{
+  color: black;
 }
