--- a/src/components/Bar/SideBar/NavMenu/NavMenu.scss
+++ b/src/components/Bar/SideBar/NavMenu/NavMenu.scss
@@ -17,7 +17,7 @@
   color: white;
   margin: 0;
 }
-.navigation-menu li {
+li {
   font-size: 12px;
   list-style-type: none;
   text-decoration: none;
