--- a/src/components/CardSection/Card/Card.css
+++ b/src/components/CardSection/Card/Card.css
@@ -2,20 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 230px;
-  height: 230px;
-  padding: 30px;
+  width: 25%;
+  height: auto;
+  padding: 3%;
   border-radius: 5%;
   background-color: #3b3a3a;
 }
 .card img {
-  width: 80px;
+  width: 40%;
   height: auto;
 }
 .card h1 {
-  font-size: 20px;
+  font-size: 100%;
 }
 .card p {
-  font-size: 14px;
+  font-size: 100%;
   margin: 0;
 }
