--- a/src/components/CardSection/CardSection.css
+++ b/src/components/CardSection/CardSection.css
@@ -5,10 +5,18 @@
     flex-direction: row;
     justify-content: space-between;
     margin-left: 17%;
+    background: transparent
   }
   .wrapper {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 5%;
+    background: linear-gradient(
+    to top,
+    #e27253 0%,
+    #e27253 50%,
+    transparent 50%,
+    transparent 100%
+  );
   }
   .wrapper h1 {
     font-size: 15px;
