--- a/src/components/Bar/SideBar/SideBar.css
+++ b/src/components/Bar/SideBar/SideBar.css
@@ -1,11 +1,11 @@
 .sidebar {
   position: absolute;
-  top: 0;
-  right: 0;
-  height: 1000px;
-  width: 15vw;
+  top: 0%;
+  right: 0%;
+  width: 16vw;
   transition: right 1s ease-in-out;
   background-color: #292929;
+  overflow-y: scroll;
 }
 .sidebar.open {
   position: fixed;
@@ -19,34 +19,5 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
-/* Bar */
-.float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  top: 0px;
-  right: 0px;
-  background-color: transparent;
-  color: #fff;
-}
-header {
-  position: flex;
-  width: 100%;
-  height: 60px;
-  background-color: transparent;
-  flex-direction: row;
-  margin-left: auto;
-}
-header div {
-  position: flex;
-  float: right;
-}
-.button-bar {
-  display: flex;
-  background-color: transparent;
-  width: 30px;
-  height: 100%;
-  justify-content: center;
-  margin: 30px;
+  margin: 0;
 }
