--- a/src/components/FirstPart/SearchBar/SearchBar.css
+++ b/src/components/FirstPart/SearchBar/SearchBar.css
@@ -1,6 +1,6 @@
 .inline {
-  width: 700px;
-  height: 50px;
+  width: 55%;
+  height: 10%;
   margin: auto;
 }
 .input-icons i {
@@ -10,21 +10,21 @@
 .input-icons {
   width: 100%;
   height: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 0.5%;
 }
 
 .icon {
-  padding: 10px;
-  min-width: 40px;
+  padding: 0.9%;
+  min-width: 4%;
 }
 
 .input-field {
   width: 100%;
-  padding: 10px;
+  padding: 1.5%;
   text-align: left;
-  margin-bottom: 3px;
-  font-size: 20px;
+  margin-bottom: 0.1%;
+  font-size: 100%;
 }
 i {
-  margin-left: 41%;
+  margin-left: 52%;
 }
