--- a/src/components/Bar/SideBar/SideBar.css
+++ b/src/components/Bar/SideBar/SideBar.css
@@ -1,23 +1,24 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0%;
   right: 0%;
   width: 16vw;
   transition: right 1s ease-in-out;
   background-color: #292929;
-  overflow-y: scroll;
 }
 .sidebar.open {
   position: fixed;
-  right: 0;
-  top: 0;
   height: 100%;
+  width: 17vw;
+  overflow-y: scroll;
 }
 .sidebar-style {
+  top: 0%;
+  right: 0%;
   width: 100%;
   height: 100%;
+  margin-top: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 0;
 }
