--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  width: 100%;
+  height: 100%;
 }
 button {
   border-radius: 8px;
@@ -35,9 +37,18 @@ button {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: white;
+    text-decoration:none;
   }
   button {
     background-color: #f9f9f9;
   }
 }
+a:link, a:visited{
+  color: white;
+  text-decoration:none;
+}
+h1, p{
+  color: white;
+}
+
