--- a/src/components/CardSection/Card/Card.css
+++ b/src/components/CardSection/Card/Card.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 25%;
-  height: auto;
+  width: 20%;
+  height: 20%;
   padding: 3%;
   border-radius: 5%;
   background-color: #3b3a3a;
@@ -13,7 +13,7 @@
   height: auto;
 }
 .card h1 {
-  font-size: 120%;
+  font-size: 100%;
 }
 .card p {
   font-size: 100%;
